--- a/spring-boot-module/src/main/resources/templates/private/reviews.html
+++ b/spring-boot-module/src/main/resources/templates/private/reviews.html
@@ -11,21 +11,6 @@
 </head>
 <body>
 <div th:replace="fragments/header.html"/>
-<div sec:authorize="isAuthenticated() && hasAuthority('Customer User')">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="favorites">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{/reviews/add}">Add review</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
 <div th:if="${page.list.isEmpty()}">
     <div class="alert alert-info text-center">
         There is no reviews at the moment.
@@ -41,16 +26,11 @@
         Review was successfully deleted.
     </div>
 </div>
-<div th:if="${param.added}">
-    <div class="alert alert-success text-center">
-        Review was successfully added.
-    </div>
-</div>
 <div class="align-self-center container-fluid justify-content-center">
     <div class="card-group">
         <div th:each="review,stat : ${reviews.reviewList}" style="width: 20%">
             <form action="#" class="card border-dark" style="padding: 20px; margin: 20px; width: 350px; height: 450px"
-                  th:action="@{/reviews/{id}/delete(id=${review.id}, page = ${page.currentPageNumber})}"
+                  th:action="@{/private/reviews/{id}/delete(id=${review.id}, page = ${page.currentPageNumber})}"
                   th:object="${review}" method="post">
                 <div sec:authorize="isAuthenticated() && hasAuthority('Administrator')">
                     <label>
@@ -75,7 +55,7 @@
 </div>
 <div sec:authorize="isAuthenticated() && hasAuthority('Administrator')">
     <form id="update" style="margin-left: 40%" action="#"
-          th:action="@{/reviews/update(page = ${page.currentPageNumber})}" th:object="${page}" method="post">
+          th:action="@{/private/reviews/update(page = ${page.currentPageNumber})}" th:object="${page}" method="post">
         <input th:if="${!page.list.isEmpty()}" class="btn btn-primary" style="width: 35%" type="submit"
                value="Update chosen">
     </form>
@@ -83,10 +63,10 @@
 <ul class="pagination justify-content-center">
     <div th:if="${page.countOfPages > 0}" th:each="page_number : ${#numbers.sequence(1, page.countOfPages)}">
         <li th:if="${page_number} == ${page.currentPageNumber}" class="page-item active">
-            <a class="page-link" th:href="@{/reviews(page=${page_number})}" th:text="${page_number}"></a>
+            <a class="page-link" th:href="@{/private/reviews(page=${page_number})}" th:text="${page_number}"></a>
         </li>
         <li th:unless="${page_number} == ${page.currentPageNumber}" class="page-item">
-            <a class="page-link" th:href="@{/reviews(page=${page_number})}" th:text="${page_number}"></a>
+            <a class="page-link" th:href="@{/private/reviews(page=${page_number})}" th:text="${page_number}"></a>
         </li>
     </div>
 </ul>
