--- a/spring-boot-module/src/main/resources/templates/private/add-review.html
+++ b/spring-boot-module/src/main/resources/templates/private/add-review.html
@@ -6,10 +6,15 @@
 </head>
 <body>
 <div th:replace="fragments/header.html"/>
+<div th:if="${param.added}">
+    <div class="alert alert-success text-center">
+        Review was successfully added.
+    </div>
+</div>
 <div class="container align-self-center">
     <div class="row" style="margin-top:20px">
         <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-            <form th:action="@{/reviews/add}" th:object="${review}" method="post">
+            <form th:action="@{/private/reviews/add}" th:object="${review}" method="post">
                 <fieldset>
                     <h1>Please input your review:</h1>
                     <div class="form-group">
