--- a/spring-boot-module/src/main/resources/templates/public/items.html
+++ b/spring-boot-module/src/main/resources/templates/public/items.html
@@ -73,10 +73,10 @@
                     <br><input th:field="${order.quantity}" type="number" name="quantity" id="quantity" class="input-sm"
                                placeholder="0" required min="1"/>
                 </div>
-                <br><a class="text-center" href="#" th:href="@{/item(item_number = ${item.id})}">More</a>
+                <br><a class="text-center" href="#" th:href="@{/public/item(item_number = ${item.id})}">More</a>
                 <div class="text-center" sec:authorize="isAuthenticated() && hasAuthority('Customer User')">
                     <br><input class="btn btn-secondary" type="submit" value="Order" formmethod="post"
-                               th:formaction="@{/orders/add(item_number = ${item.id}, page = ${page.currentPageNumber})}">
+                               th:formaction="@{/private/orders/add(item_number = ${item.id}, page = ${page.currentPageNumber})}">
                 </div>
                 <div class="text-center" sec:authorize="isAuthenticated() && hasAuthority('Sale User')">
                     <br><input class="btn btn-secondary" type="submit" value="Delete">
@@ -91,10 +91,10 @@
     <ul class="pagination justify-content-center">
         <div th:if="${page.countOfPages > 0}" th:each="page_number : ${#numbers.sequence(1, page.countOfPages)}">
             <li th:if="${page_number} == ${page.currentPageNumber}" class="page-item active">
-                <a class="page-link" th:href="@{/items(page=${page_number})}" th:text="${page_number}"></a>
+                <a class="page-link" th:href="@{/public/items(page=${page_number})}" th:text="${page_number}"></a>
             </li>
             <li th:unless="${page_number} == ${page.currentPageNumber}" class="page-item">
-                <a class="page-link" th:href="@{/items(page=${page_number})}" th:text="${page_number}"></a>
+                <a class="page-link" th:href="@{/public/items(page=${page_number})}" th:text="${page_number}"></a>
             </li>
         </div>
     </ul>
