--- a/spring-boot-module/src/main/resources/templates/private/order.html
+++ b/spring-boot-module/src/main/resources/templates/private/order.html
@@ -19,7 +19,8 @@
 <div class="align-self-center container-fluid justify-content-center">
     <div class="card border-dark text-center"
          style="padding: 20px; margin-top: 30px; margin-left: 10%; width: 80%; height: auto">
-        <form action="#" th:action="@{/private/order/update(order_id = ${order.id})}" th:object="${order}" method="post">
+        <form action="#" th:action="@{/private/order/update(order_id = ${order.id})}" th:object="${order}"
+              method="post">
             <b class="text-lg-center"><span>Order number:</span></b>
             <br><span class="text-lg-center text-center" th:text="*{orderNumber}"></span>
             <br><b class="text-lg-center text">Status:</b>
