--- a/spring-boot-module/src/main/resources/templates/public/articles.html
+++ b/spring-boot-module/src/main/resources/templates/public/articles.html
@@ -56,6 +56,11 @@
         Article successfully deleted.
     </div>
 </div>
+<div th:if="${param.favorite_added}">
+    <div class="alert alert-success text-center">
+        Successfully added to favorites.
+    </div>
+</div>
 <div class="align-self-center container-fluid justify-content-center">
     <div class="card-group">
         <div th:each="article,stat : ${page.list}" style="width: 20%">
